--- a/Project/app/bin/main/static/scss/index.scss
+++ b/Project/app/bin/main/static/scss/index.scss
@@ -8,6 +8,15 @@ $sad: #e05841;
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 @import './session';
+@import './att';
+@import './chat';
+@import './emoji';
+@import './mySession';
+@import './question';
+@import './auth';
+@import './host';
+@import './layout';
+@import './mobile';
 
 body{
   width: 100vw;
@@ -16,402 +25,12 @@ body{
   color: $dark;
 }
 
-section.body{
-  display: grid;
-  grid-template-areas: 'menu content';
-  grid-template-columns: 300px auto;
-
-  .btn-round{
-    border-radius: 50px;
-    padding: 1em 2em 1em 2em;
-  }
-
-  .menu{
-    background-color: $dark;
-    min-height: 100vh;
-    position: fixed;
-    width: $sidebar-width;
-  
-    .logo{
-      color: $primary;
-      text-align: center;
-    }
-    .nav-link a{
-      color:$primary;
-      font-weight: bold;
-      text-decoration: none;
-      font-size: 1.4em;
-    }
-
-    .nav-link.active>a{
-      color: $light!important;
-    }
-
-    .nav-logout{
-      position: absolute;
-      bottom: 5%;
-    }
-  }
-
-  .main{
-    background-image: url('../img/background.svg');
-    background-size: cover;
-    min-height: 100vh;
-    grid-area: content;
-    width: calc(100vw - #{$sidebar-width});
-
-    .heading{
-      text-align: center;
-      position: relative;
-      h1{
-        margin-top: 0.4em;
-      }
-    }
-    
-    .content{
-      display:flex;
-      flex-direction: column;
-      align-items: flex-start;
-      
-      .home-action{
-        margin-top: 10%;
-        margin-bottom: 10%;
-        margin-left: 3%;
-        margin-right: 3%;
-        font-weight: bold;
-      }
-
-      .create-session,.create-series{
-        flex-direction: flex-start;
-      }
-    
-      .join-session{
-        align-self: flex-end;
-      }
-    }
-  }
-
-}
-.videobgwrapper {
-  filter:blur(4px);
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-  z-index: -100;
-}
-.videobg{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-@media (min-aspect-ratio: 16/9) {
-  .videobg{
-    width: 100%;
-    height: auto;
-  }
-}
-@media (max-aspect-ratio: 16/9) {
-  .videobg {
-    width: auto;
-    height: 100%;
-  }
-}
-
-
-.landingcontainer{
-  padding-top: 100px;
-  text-align: center;
-  .title{
-    display: inline-block;
-    background-image: linear-gradient(135deg, #24AFAF,#43E2B2);
-    color: white;
-    font-weight: bold;
-    font-size:78px;
-    font-family: 'PT Mono', monospace;
-    padding: 24px;
-    border-radius: 20px;
-  }
-
-}
-
-
-.invalid{
-  border: solid 2px lighten($sad, 30%);
-}
-
-.registerIcon{
-  display: flex;
-  justify-content: center;
-  i{
-    font-size:2.4cm;
-    color: white;
-  }
-}
-
-.register-right-side{
-  display: flex;
-  flex-direction: column;
-  justify-content: left;
-  margin-top: 64px;
-}
-
-.form-row{
-  margin-top: 32px;
-}
-
-.register-box{
-  width: 100%;
-  background-image: linear-gradient(#43E2B2,#24AFAF);
-  padding: 32px;
-  border-radius: 50px;
-  margin-right: 64px;
-  margin-top: 64px;
-}
-
-.terms{
-  background-color: #43E2B2;
-  margin-top: 64px;
-  margin-bottom:32px;
-  justify-self: left;
-  border-radius: 10px;
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  display: inline;
-}
-.blackbg{
-  background-color: #342E37;
-}
-.registerBackground{
-  
-  background-image: url('../img/background.svg');
-  background-size: cover;
-  height: 100vh;
-  grid-area: content;
-  .title-text{
-    padding-top: 100px;
-    margin-bottom: 64px;
-  }
-}
-
-
-.form-container{
-  width:100%;
-  display: flex;
-  justify-content: center;
-}
-
-.register-bottom-right{
-  width: 100%;
-  height: 100%;
-}
-.formwidth{
-  width: 80%;
-}
-
-.termslabel{
-  margin-left: 8px;
-}
-
-.landingflex{
-  margin-top: 100px;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-  text-align: center;
-  height: 100%;
-  .landingflexchild{
-    align-self:center;
-  }
-}
-
-.sessionbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-  margin-top: 5%;
-  .box{
-    width: 400px;
-    height: 600px;
-    padding-top: 32px;
-    padding-bottom: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 25px;
-    background-color:rgba(255, 255, 255, .5);
-  }
-}
-.sessionprivate{
-  display: flex;
-  flex-direction: row;
-  .private{
-    margin-left: 8px;
-  }
-}
-.sessiongridcontainer{
-  margin-top: 5%;
-  background-image: url('../img/secondary-background.png');
-  background-size: cover;
-  border-radius:50px;
-  height:80vh;
-  overflow-y: scroll;
-  
-  .sessiongrid{
-    display:grid;
-    grid-template-columns: auto auto auto;
-    padding: 16px;
-    
-    .sessiongridchild{
-      background-image: linear-gradient(#43E2B2,#24AFAF);
-      border: 1px solid rgba(0, 0, 0, 0.8);
-      border-radius: 25px;
-      padding: 16px;
-      margin: 16px;
-      cursor: pointer;
-    }
-    .sessiongridchild:hover{
-      box-shadow: 10px 10px $dark;
-    }
-  }
-}
-.sessiongridcontainer::-webkit-scrollbar {
+body::-webkit-scrollbar{
   display: none;
 }
-.chat-container{
-  background-color: $dark;
-  border-radius: 25px;
-  padding-left:16px;
-  padding-right:32px;
-  padding-bottom: 8px;
 
-  .chat-scroll{
-    height:300px;
-    overflow-y: scroll;
-    .chat-msg{
-      padding: 4px;
-      background-color: $primary;
-      border-radius: 10px;
-      margin-bottom: 16px;
-    }
-  }
-  .chat-scroll::-webkit-scrollbar {
-    display: none;
-  }
 
-  
 
-  .chat-input{
-    display: flex;
-    flex-direction: row;
-    padding: 4px;
-    padding-left:16px;
-    background-color: white;
-    border-radius:15px;
 
-    .transparent-button{
-      background-color: white;
-      color: $primary;
-      border: none;
-      margin:none;
-      padding: none;
-      float: right;
-      vertical-align: middle;
-    }
-    input[type=text]{
-      border: none;
-      margin:none;
-      padding: none;
-      width:100%;
-      border-top-style: hidden;
-      border-right-style: hidden;
-      border-left-style: hidden;
-      border-bottom-style: hidden;
-    }
-    
-    input[type=text]:focus{
-      outline:none;
-    }
-    
-    
-  }
-  .chat-anonymous{
-    display:flex;
-    flex-direction: row;
-    margin-bottom: 24px;
-    input[type=checkbox]{
-      margin-right: 8px;
-      padding: none;
-    }
-    .anonymous{
-      color: white;
-    }
-  }
-  
-}
 
-.question-container{
-  display:flex;
-  flex-direction: row;
-  margin-bottom: 32px;
-  height:500px;
-  width:50%;
-  .question-left{
-    width:33.3%;
-    background-color: $dark;
-    padding:16px;
-    border-radius:25px 0px 0px 25px;
-    .questions{
-      color:$primary;
-      margin-bottom: 8px;
-    }
-    .question-scroll{
-      height:400px;
-      overflow-y: scroll;
-    }
-    .question-scroll::-webkit-scrollbar {
-      display: none;
-    }
-  } 
-  .question-right{
-    width:66.7%;
-    background-color: #ffffff;
-    padding:16px;
-    border-radius:0px 25px 25px 0px;  
-    .content{
-      width:100%;
-      height:450px;
-      overflow-y: scroll;
-      .question-host{
-        width:100%;
-        .answer{
-          border: 1px solid black;
-          border-radius: 15px;
-          padding: 8px;
-          width:100%;
-          margin-bottom:16px;
-        }
-      }
-      .question-att{
-  
-      }
-    }
-    .content::-webkit-scrollbar {
-      display: none;
-    }
-  }
-}
-
-.profile-element{
-  padding:8px;
-  margin:16px;
-  border-radius: 15px;
-  background-color: $dark;
-}
 
