--- a/Project/app/bin/main/static/css/index.css
+++ b/Project/app/bin/main/static/css/index.css
@@ -11474,7 +11474,20 @@ fieldset:disabled .btn {
 
 .chart {
   padding: 1rem;
-  border-radius: 15px;
+  border-radius: 0 1rem 1rem 1rem;
+}
+
+.btn-chart-line {
+  border-radius: 1rem 0 0 0;
+}
+
+.btn-chart-bar {
+  border-radius: 0 1rem 0 0;
+}
+
+.btn-chart-line:focus, .btn-chart-line:focus {
+  box-shadow: none;
+  -webkit-box-shadow: none;
 }
 
 .att-layout {
@@ -12017,8 +12030,8 @@ section.body .main .content .join-session {
 }
 
 .videobgwrapper {
-  -webkit-filter: blur(4px);
-          filter: blur(4px);
+  -webkit-filter: blur(6px) brightness(75%);
+          filter: blur(6px) brightness(75%);
   position: fixed;
   top: 0;
   right: 0;
@@ -12058,7 +12071,7 @@ section.body .main .content .join-session {
 .landingcontainer .title {
   display: inline-block;
   background-image: linear-gradient(135deg, #24AFAF, #43E2B2);
-  color: white;
+  color: #342e37;
   font-weight: bold;
   font-size: 78px;
   font-family: 'PT Mono', monospace;
@@ -12145,6 +12158,13 @@ section.body .main .content .join-session {
   border-radius: 25px;
   background-color: #43e2b2;
   padding: 8px;
+}
+
+.btn-landing {
+  width: 300px;
+  height: 120px;
+  border-radius: 30px;
+  font-size: 64px;
 }
 
 @media (max-width: 576px) {
