--- a/Project/app/src/main/resources/static/css/index.css
+++ b/Project/app/src/main/resources/static/css/index.css
@@ -12030,8 +12030,8 @@ section.body .main .content .join-session {
 }
 
 .videobgwrapper {
-  -webkit-filter: blur(4px);
-          filter: blur(4px);
+  -webkit-filter: blur(6px) brightness(75%);
+          filter: blur(6px) brightness(75%);
   position: fixed;
   top: 0;
   right: 0;
@@ -12071,7 +12071,7 @@ section.body .main .content .join-session {
 .landingcontainer .title {
   display: inline-block;
   background-image: linear-gradient(135deg, #24AFAF, #43E2B2);
-  color: white;
+  color: #342e37;
   font-weight: bold;
   font-size: 78px;
   font-family: 'PT Mono', monospace;
@@ -12158,6 +12158,13 @@ section.body .main .content .join-session {
   border-radius: 25px;
   background-color: #43e2b2;
   padding: 8px;
+}
+
+.btn-landing {
+  width: 300px;
+  height: 120px;
+  border-radius: 30px;
+  font-size: 64px;
 }
 
 @media (max-width: 576px) {
