--- a/Project/app/src/main/resources/static/scss/_layout.scss
+++ b/Project/app/src/main/resources/static/scss/_layout.scss
@@ -73,7 +73,7 @@ section.body{
     }
   }
   .videobgwrapper {
-    filter:blur(4px);
+    filter:blur(6px) brightness(75%);
     position: fixed;
     top: 0;
     right: 0;
@@ -108,7 +108,7 @@ section.body{
     .title{
       display: inline-block;
       background-image: linear-gradient(135deg, #24AFAF,#43E2B2);
-      color: white;
+      color: $dark;
       font-weight: bold;
       font-size:78px;
       font-family: 'PT Mono', monospace;
@@ -175,3 +175,10 @@ section.body{
     background-color: $primary;
     padding:8px;
   }
+
+.btn-landing{
+  width: 300px;
+  height: 120px;
+  border-radius: 30px;
+  font-size: 64px;
+}
